--- a/themes/mytheme/email/messages/messages_en.properties
+++ b/themes/mytheme/email/messages/messages_en.properties
@@ -4,6 +4,8 @@ executeActionsSubject=Đặt lại mật khẩu Nexo-network
 passwordUpdateSubject=Mật khẩu của bạn đã được cập nhật
 identityProviderLinkSubject=Liên kết tài khoản Nexo-network của bạn
 emailTestSubject=Email thử nghiệm từ Nexo-network
+eventUpdatePasswordSubject=Thông báo thay đổi mật khẩu
+eventUpdateCredentialSubject=Thông báo cập nhật thông tin xác thực
 
 linkExpirationFormatter.timePeriodUnit.seconds={0,choice,0#giây|1#giây|1<giây}
 linkExpirationFormatter.timePeriodUnit.minutes={0,choice,0#phút|1#phút|1<phút}
